--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -18,8 +18,8 @@ layout {
 
         + * {
             position: relative;
-            display: flex;
-            flex: 1 1 auto;
+            // display: flex;
+            // flex: 1 1 auto;
             width: 100%;
         }
     }
